# scikit-verify

./: README.md  pyproject.toml
skverify/: _metrics.py
